--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Selenium-Remote-Driver
 
+1.35  10-21-2019 TEODESIAN
+        [BUG FIXES]
+        - Fix race condition and inability to find a port in certain circumstances when using direct driver modules.
+
 1.34   09-11-2019 TEODESIAN
         [BUG FIXES]
         - Remove .so files from Firefox lib tree to simplify CPAN RPM build tool chains
