--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Selenium-Remote-Driver
 
-1.37  02-17-2019 TEODESIAN
+1.38  02-18-2020 TEODESIAN
+        [BUG FIXES]
+        -correct incorrect prior changelog date
+        -fix undefined value warnings when the remote server goes out to lunch
+
+1.37  02-17-2020 TEODESIAN
         [BUG FIXES]
         - obey the auto_close flag in the direct drivers
 
