--- a/Changes
+++ b/Changes
@@ -5,6 +5,8 @@ Revision history for Selenium-Remote-Driver
         - Add execute_script and execute_async_script convenience methods to WebElements.
         [BUG FIXES]
         - Fix a couple more documentation issues with driver specific problems
+        [REMOVALS]
+        - Removed ide-plugin.js, as it's not been supported or working in years
 
 1.38  10-19-2020 TEODESIAN
         [BUG FIXES]
