--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Selenium-Remote-Driver
 1.39  10-20-2020 TEODESIAN
         [NEW FEATURES]
         - Add execute_script and execute_async_script convenience methods to WebElements.
+        - Add die flag to Selenium::Waiter
         [BUG FIXES]
         - Fix a couple more documentation issues with driver specific problems
         [REMOVALS]
