--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Selenium-Remote-Driver
 
+1.41  02-03-2021 TEODESIAN
+        [BUG FIXES]
+        - suppress warning in CanStartBinary when geckodriver not in PWD
+
 1.40  12-04-2020 TEODESIAN
         [BUG FIX]
         - fix double_click
