prep for release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Selenium-Remote-Driver
 
+1.41  03-16-2021 TEODESIAN
+        [BUG FIXES]
+        - Declare minimum versions in testsuite to suppress CPANTesters failures
+
 1.40  02-03-2021 TEODESIAN
         [BUG FIXES]
         - suppress warning in CanStartBinary when geckodriver not in PWD
