--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Selenium-Remote-Driver
 
+1.43  03-18-2021 TEODESIAN
+        - Remove all usage of the redefine() method in Test::MockModule, because that module is a mess to upgrade apparently
+        - Tweak ENV setting in Test::* namespaces, see POD
+
 1.42  03-17-2021 TEODESIAN
         - Once more with feeling
 
