--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Selenium-Remote-Driver
 
+1.47 2022-05-02 TEODESIAN
+    - Add DWIM to inputs accepted by ActionChains send_keys, key_up & key_down, and add some docu
+
 1.46 2021-12-04 TEODESIAN
     - Document the keys of WDKEYS hash in POD. Contribution by Yuki Kimoto.
 
